--- a/index.css
+++ b/index.css
@@ -65,10 +65,8 @@
   width: 660px;
   height: 70px;
   background-color: transparent;
-  position: absolute;
-  margin-top: 170px;
-  margin-left: 390px;
-
+  padding-top: 210px;
+  display: inline-block;
 }
 .video
 {
@@ -88,16 +86,16 @@
 	width: 100%;
 	height: 87px;
 	background-color: black;
+	text-align: center;
 	opacity: 0.8;
-   filter:alpha(opacity=80);
+    filter:alpha(opacity=80);
 }
 .menuBar
 {
   height: 80px;
-  width: 833px;
+  width: 100%;
   background-color:black;
   position: absolute;
-  opacity: 0.9;
   margin-right: 5px;
 }
 .menuBar ul li
@@ -117,7 +115,7 @@
   text-decoration: none;
   padding: 10px;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 20px;
 }
 .menuBar ul li:hover
 {
@@ -128,13 +126,12 @@
 }
 #Caption
 {
-	width: 900;
+	width: 100%;
 	height:80px;
 	background-color: black;
 }
 #btnExplore
 {
-	position: absolute;
 	height: 40px;
 	width: 210px;
 	font-weight: normal;font-size: 20px;
@@ -142,8 +139,7 @@
 	background-color: transparent;
 	color: red;
 	border-color: red;
-	margin-left: 560px;
-	margin-top: 330px;
+	margin-top: 30px;
 
 }
 #btnExplore:hover
